# web-search-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.code-audit/: 2026-06-12-web_search_mcp-fd35728.json
openspec/: config.yaml
openspec/changes/archive/2026-06-12-initial-server/: proposal.md  tasks.md
openspec/changes/archive/2026-06-12-initial-server/specs/web-search/: spec.md
openspec/changes/initial-server/: design.md
openspec/specs/web-search/: spec.md
src/web_search_mcp/: __init__.py  __main__.py  models.py  search.py  server.py
tests/: conftest.py  test_models.py  test_search.py  test_server.py
